--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,247 @@
-$main-color: red;
+@import "@/styles/variables.scss";
 
-body {
-    color: $main-color;
+*,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.dupa {
-    color: red;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    color: #ffffff;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.6rem;
+}
+
+.SiteWrapper {
+    .BorderWrapper {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: 0;
+        position: absolute;
+
+        .Border {
+            width: 250px;
+            height: 250px;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+
+            .Border-photo {
+                width: 80px;
+                height: 80px;
+                display: block;
+                opacity: 0;
+            }
+
+            .Border-line {
+                position: absolute;
+                background-color: $borderLine-color;
+                transition: background-color 0.3s;
+            }
+
+            .Border-line--top {
+                top: 0;
+                left: 0;
+                width: 0%;
+                height: $borderLine-width;
+            }
+
+            .Border-line--right {
+                right: 0;
+                top: 0;
+                width: $borderLine-width;
+                height: 0%;
+            }
+
+            .Border-line--bottom {
+                bottom: 0;
+                right: 0;
+                width: 0%;
+                height: $borderLine-width;
+            }
+
+            .Border-line--left {
+                left: 0;
+                bottom: 0;
+                width: $borderLine-width;
+                height: 0%;
+            }
+        }
+    }
+
+    .PageMain {
+        height: 0;
+        width: 100vw;
+        background-color: #000000;
+        position: relative;
+        color: #ffffff;
+
+        .PageMain-bg {
+            z-index: -1;
+            width: 100vw;
+            height: 100vh;
+            opacity: 0;
+            background-image: url("../images/myself.jpg");
+            background-position: center left;
+            background-color: #000000;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            &:after {
+                content: "";
+                display: block;
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.65);
+            }
+        }
+
+        .PageContent {
+            position: absolute;
+            height: 100vh;
+            width: 100vw;
+            z-index: 20;
+            padding: 78px;
+            display: flex;
+            flex-direction: column;
+
+            .PageHeader {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .PageHeader-title {
+                    font-weight: 300;
+                    font-size: 2rem;
+                    letter-spacing: 2px;
+                    opacity: 0;
+
+                    @media screen and (max-width: 700px) {
+                        padding-bottom: 20px;
+                    }
+                }
+
+                .ExternalLinks {
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    .ExternalLinks-title {
+                        font-weight: 300;
+                        margin-right: 10px;
+                        opacity: 0;
+
+                        @media screen and (max-width: 700px) {
+                            display: none;
+                            margin-right: 0;
+                        }
+                    }
+
+                    .ExternalLinks-link {
+                        color: white;
+                        text-decoration: none;
+                        font-size: 3rem;
+                        margin: 10px;
+                        opacity: 0;
+
+                        &:first-child {
+                            margin-left: 0;
+                        }
+
+                        &:first-child {
+                            margin-right: 0;
+                        }
+                    }
+                }
+
+                @media screen and (max-width: 700px) {
+                    flex-direction: column;
+                    justify-content: center;
+                }
+            }
+
+            .PageSection {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex: 1;
+
+                .PageLogo {
+                    fill: #ffffff;
+                    width: 600px;
+                    height: 300px;
+                    display: block;
+                    opacity: 0;
+                }
+            }
+
+            .PageFooter {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .PageFooter-iconsDesc {
+                    font-weight: 300;
+                    opacity: 0;
+
+                    @media screen and (max-width: 700px) {
+                        padding-bottom: 20px;
+                        text-align: center;
+                    }
+                }
+
+                .DevIcons {
+                    display: flex;
+                    list-style-type: none;
+                    flex-wrap: wrap;
+
+                    .Icon {
+                        margin: 10px;
+                        font-size: 2.5rem;
+                        opacity: 0;
+
+                        &:first-child {
+                            margin-left: 0px;
+                        }
+
+                        &:last-child {
+                            margin-right: 0px;
+                        }
+                    }
+
+                    @media screen and (max-width: 700px) {
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+
+                @media screen and (max-width: 700px) {
+                    flex-direction: column;
+                    justify-content: center;
+                }
+            }
+        }
+    }
 }
