--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,3 @@
 $borderLine-padding: 200px;
-$borderLine-width: 5px;
-$borderLine-color: #000000;
+$borderLine-width: 3px;
+$borderLine-color: #ffffff;
