--- a/src/template/App.html
+++ b/src/template/App.html
@@ -1,135 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="My personal website, with my current technology stack and links to other places where you can find me on the internet."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="images/mlogo.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Maciej Biel</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="description"
-    content="My personal website, with my current technology stack and links to other places where you can find me on the internet.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="images/mlogo.png">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900&display=swap" rel="stylesheet">
-  <title>Maciej Biel</title>
-</head>
-
-<body>
-  <div class="SiteWrapper">
-    <div class="BorderWrapper">
-      <div class="Border">
-        <div class="Border-line Border-line--top"></div>
-        <div class="Border-line Border-line--right"></div>
-        <div class="Border-line Border-line--bottom"></div>
-        <div class="Border-line Border-line--left"></div>
+  <body>
+    <div class="SiteWrapper">
+      <div class="BorderWrapper">
+        <div class="Border">
+          <div class="Border-line Border-line--top"></div>
+          <div class="Border-line Border-line--right"></div>
+          <div class="Border-line Border-line--bottom"></div>
+          <div class="Border-line Border-line--left"></div>
+        </div>
       </div>
-    </div>
-    <main class="PageMain">
-      <div class="PageMain-bg">
-      </div>
-      <div class="PageContent">
-        <header class="PageHeader">
-          <h1 class="PageHeader-title">MaciejBiel.pl</h1>
-          <div class="ExternalLinks">
-            <p class="ExternalLinks-title">Find me on:</p>
-            <a class="ExternalLinks-link" target="_blank" rel="noopener" href="https://www.facebook.com/biel.maciej"
-              aria-label="My Facebook Profile">
-              <i class="icon ion-logo-facebook"></i>
-            </a>
-            <a class="ExternalLinks-link" target="_blank" rel="noopener" href="https://www.instagram.com/_maciej66/"
-              aria-label="My Facebook Profile">
-              <i class="icon ion-logo-instagram"></i>
-            </a>
-            <a class="ExternalLinks-link" target="_blank" rel="noopener"
-              href="https://www.linkedin.com/in/maciej-biel-a44675152/" aria-label="My LinkedIn Profile">
-              <i class="icon ion-logo-linkedin"></i>
-            </a>
-            <a class="ExternalLinks-link" target="_blank" rel="noopener" href="https://github.com/maciejb2k"
-              aria-label="My GitHub Profile">
-              <i class="icon ion-logo-github"></i>
-            </a>
-            <a class="ExternalLinks-link" target="_blank" rel="noopener" href="mailto:biznes.biel@gmail.com"
-              aria-label="Contact me via my email address">
-              <i class="icon ion-md-mail"></i>
-            </a>
-          </div>
-        </header>
-        <section class="PageSection">
-          <svg class="PageLogo" viewBox="0 0 927.559 400.578">
-            <path
-              d="M458.281,91.695v118.843h-19.114v-57.51l-33.243,47.87l-33.242-47.87v57.51h-19.115V91.695l52.357,76.292L458.281,91.695z" />
-            <path d="M509.9,191.234l-9.796,19.304h-21.32l57.623-115.247l38.464,76.927h-21.609l-16.854-33.854l-16.999,33.854L509.9,191.234z
-                                            M594.03,210.538h-21.465l-9.508-19.16h21.321L594.03,210.538z" />
-            <path d="M629.675,152.363c0,24.267,15.458,41.553,37.231,41.553c15.957,0,26.096-8.311,32.412-15.458l13.297,13.795
+      <main class="PageMain">
+        <div class="PageMain-bg"></div>
+        <div class="PageContent">
+          <header class="PageHeader">
+            <h1 class="PageHeader-title">MaciejBiel.pl</h1>
+            <div class="ExternalLinks">
+              <p class="ExternalLinks-title">Find me on:</p>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="https://www.facebook.com/biel.maciej"
+                aria-label="My Facebook Profile"
+              >
+                <i class="icon ion-logo-facebook"></i>
+              </a>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="https://www.instagram.com/_maciej66/"
+                aria-label="My Facebook Profile"
+              >
+                <i class="icon ion-logo-instagram"></i>
+              </a>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="https://www.linkedin.com/in/maciej-biel-a44675152/"
+                aria-label="My LinkedIn Profile"
+              >
+                <i class="icon ion-logo-linkedin"></i>
+              </a>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="https://dribbble.com/maciejb"
+                aria-label="My Dribbble Account"
+              >
+                <i class="icon ion-logo-dribbble"></i>
+              </a>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="https://github.com/maciejb2k"
+                aria-label="My GitHub Profile"
+              >
+                <i class="icon ion-logo-github"></i>
+              </a>
+              <a
+                class="ExternalLinks-link"
+                target="_blank"
+                rel="noopener"
+                href="mailto:biznes.biel@gmail.com"
+                aria-label="Contact me via my email address"
+              >
+                <i class="icon ion-md-mail"></i>
+              </a>
+            </div>
+          </header>
+          <section class="PageSection">
+            <svg class="PageLogo" viewBox="0 0 927.559 400.578">
+              <path
+                d="M458.281,91.695v118.843h-19.114v-57.51l-33.243,47.87l-33.242-47.87v57.51h-19.115V91.695l52.357,76.292L458.281,91.695z"
+              />
+              <path
+                d="M509.9,191.234l-9.796,19.304h-21.32l57.623-115.247l38.464,76.927h-21.609l-16.854-33.854l-16.999,33.854L509.9,191.234z
+                                            M594.03,210.538h-21.465l-9.508-19.16h21.321L594.03,210.538z"
+              />
+              <path
+                d="M629.675,152.363c0,24.267,15.458,41.553,37.231,41.553c15.957,0,26.096-8.311,32.412-15.458l13.297,13.795
                                            c-9.807,10.97-24.932,19.946-44.545,19.946c-34.905,0-57.843-26.262-57.843-59.671c0-33.409,22.771-60.003,57.178-60.003
                                            c18.948,0,33.409,7.978,43.548,18.948l-13.297,13.796c-6.648-7.812-15.458-14.461-31.414-14.461
-                                           C644.967,110.809,629.675,128.262,629.675,152.363z" />
-            <path d="M735.057,210.538v-91.584l19.115-27.259v118.843H735.057z" />
-            <path d="M860.874,95.291v19.304h-57.623l-19.16-19.304H860.874z M803.251,143.406h57.623v19.16h-57.623h-19.16v-19.16H803.251z
-                                            M803.251,191.234h57.623v19.304h-76.783v-1.584L803.251,191.234z" />
-            <path d="M893.161,193.916c8.976,0,13.796-5.817,13.796-16.788v-82.94h19.115v82.442c0,21.608-10.638,35.57-32.911,35.57
-                                           c-4.321,0-8.311-0.665-11.635-1.662L893.161,193.916z" />
-            <path
-              d="M353.566,366.783v-116.35h37.232c22.106,0,38.562,10.305,38.562,30.916c0,15.125-9.142,23.436-18.948,25.597
+                                           C644.967,110.809,629.675,128.262,629.675,152.363z"
+              />
+              <path
+                d="M735.057,210.538v-91.584l19.115-27.259v118.843H735.057z"
+              />
+              <path
+                d="M860.874,95.291v19.304h-57.623l-19.16-19.304H860.874z M803.251,143.406h57.623v19.16h-57.623h-19.16v-19.16H803.251z
+                                            M803.251,191.234h57.623v19.304h-76.783v-1.584L803.251,191.234z"
+              />
+              <path
+                d="M893.161,193.916c8.976,0,13.796-5.817,13.796-16.788v-82.94h19.115v82.442c0,21.608-10.638,35.57-32.911,35.57
+                                           c-4.321,0-8.311-0.665-11.635-1.662L893.161,193.916z"
+              />
+              <path
+                d="M353.566,366.783v-116.35h37.232c22.106,0,38.562,10.305,38.562,30.916c0,15.125-9.142,23.436-18.948,25.597
                                            c12.632,2.161,23.935,10.472,23.935,27.093c0,19.945-13.63,32.744-39.227,32.744H353.566z M372.682,298.802h18.117
                                            c9.641,0,19.114-3.324,19.114-14.959c0-11.802-9.641-15.126-19.114-15.126h-18.117V298.802z M394.289,316.753h-21.607V348.5h21.607
-                                           c10.472,0,20.278-3.989,20.278-16.123C414.567,320.409,404.927,316.753,394.289,316.753z" />
-            <path d="M457.618,366.783v-91.584l19.115-27.259v118.843H457.618z" />
-            <path d="M583.436,251.537v19.304h-57.623l-19.16-19.304H583.436z M525.813,299.652h57.623v19.159h-57.623h-19.16v-19.159H525.813z
-                                            M525.813,347.479h57.623v19.304h-76.783v-1.585L525.813,347.479z" />
-            <path d="M679.05,348.5v18.283h-67.483v-116.35h19.115V348.5H679.05z" />
-            <polyline opacity="0.2" points="29.333,400.578 29.333,13 190.456,261.069 292.141,104.859 292.141,214.403 190.948,370.122 
-                                           88.772,214.403 88.772,400.578 " />
-            <polyline
-              points="0,387.578 0,0 161.122,248.069 262.807,91.859 262.807,201.403 161.614,357.122 59.438,201.403 59.438,387.578 " />
-          </svg>
-        </section>
-        <footer class="PageFooter">
-          <p class="PageFooter-iconsDesc">My technology stack:</p>
-          <ul class="DevIcons">
-            <li class="Icon" title="HTML">
-              <i class="devicon-html5-plain"></i>
-            </li>
-            <li class="Icon" title="CSS">
-              <i class="devicon-css3-plain"></i>
-            </li>
-            <li class="Icon" title="SCSS">
-              <i class="devicon-sass-original"></i>
-            </li>
-            <li class="Icon" title="ES5+">
-              <i class="devicon-javascript-plain"></i>
-            </li>
-            <li class="Icon" title="TypeScript">
-              <i class="devicon-typescript-plain"></i>
-            </li>
-            <li class="Icon" title="React">
-              <i class="devicon-react-original"></i>
-            </li>
-            <li class="Icon" title="Python">
-              <i class="devicon-python-plain"></i>
-            </li>
-            <li class="Icon" title="Django REST Framework">
-              <i class="devicon-django-plain"></i>
-            </li>
-            <li class="Icon" title="Git">
-              <i class="devicon-git-plain"></i>
-            </li>
-            <li class="Icon" title="Adobe Photoshop">
-              <i class="devicon-photoshop-plain"></i>
-            </li>
-            <li class="Icon" title="Adobe Illustrator">
-              <i class="devicon-illustrator-plain"></i>
-            </li>
-          </ul>
-        </footer>
-      </div>
-    </main>
-  </div>
-  <!--
+                                           c10.472,0,20.278-3.989,20.278-16.123C414.567,320.409,404.927,316.753,394.289,316.753z"
+              />
+              <path
+                d="M457.618,366.783v-91.584l19.115-27.259v118.843H457.618z"
+              />
+              <path
+                d="M583.436,251.537v19.304h-57.623l-19.16-19.304H583.436z M525.813,299.652h57.623v19.159h-57.623h-19.16v-19.159H525.813z
+                                            M525.813,347.479h57.623v19.304h-76.783v-1.585L525.813,347.479z"
+              />
+              <path
+                d="M679.05,348.5v18.283h-67.483v-116.35h19.115V348.5H679.05z"
+              />
+              <polyline
+                opacity="0.2"
+                points="29.333,400.578 29.333,13 190.456,261.069 292.141,104.859 292.141,214.403 190.948,370.122 
+                                           88.772,214.403 88.772,400.578 "
+              />
+              <polyline
+                points="0,387.578 0,0 161.122,248.069 262.807,91.859 262.807,201.403 161.614,357.122 59.438,201.403 59.438,387.578 "
+              />
+            </svg>
+          </section>
+          <footer class="PageFooter">
+            <p class="PageFooter-iconsDesc">My technology stack:</p>
+            <ul class="DevIcons">
+              <li class="Icon" title="HTML">
+                <i class="devicon-html5-plain"></i>
+              </li>
+              <li class="Icon" title="CSS">
+                <i class="devicon-css3-plain"></i>
+              </li>
+              <li class="Icon" title="SCSS">
+                <i class="devicon-sass-original"></i>
+              </li>
+              <li class="Icon" title="ES5+">
+                <i class="devicon-javascript-plain"></i>
+              </li>
+              <li class="Icon" title="TypeScript">
+                <i class="devicon-typescript-plain"></i>
+              </li>
+              <li class="Icon" title="React">
+                <i class="devicon-react-original"></i>
+              </li>
+              <li class="Icon" title="Python">
+                <i class="devicon-python-plain"></i>
+              </li>
+              <li class="Icon" title="Django REST Framework">
+                <i class="devicon-django-plain"></i>
+              </li>
+              <li class="Icon" title="Git">
+                <i class="devicon-git-plain"></i>
+              </li>
+              <li class="Icon" title="Adobe Photoshop">
+                <i class="devicon-photoshop-plain"></i>
+              </li>
+              <li class="Icon" title="Adobe Illustrator">
+                <i class="devicon-illustrator-plain"></i>
+              </li>
+            </ul>
+          </footer>
+        </div>
+      </main>
+    </div>
+    <!--
     Pure CSS Gradient by:
     https://codepen.io/P1N2O/pen/pyBNzX
     ---
     Background Thumb Fan by:
     https://www.thevirts.com/
-  -->
-</body>
-
+  --></body>
 </html>
